# PortablePicoTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  my_project.c
